--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>dev.chingan</groupId>
-	<artifactId>movies</artifactId>
+	<artifactId>thriftStore</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>movies</name>
+	<name>thriftStore</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -149,7 +149,7 @@
 
 			</plugin>
 		</plugins>
-		<finalName>spring-boot-aws-exe</finalName>
+		<finalName>thriftStore-exe</finalName>
 	</build>
 	<repositories>
 		<repository>
